fix: trying to fix image bug on mobile

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -576,7 +576,7 @@ main #portfolio div {
 main #portfolio a {
     margin: auto;
     height: 100%;
-    min-height: 12rem;
+    min-height: 11rem;
     color: black;
 }
 
